fix mistakes index.html

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="main"></div>
         <div class="footer">
             <button type="button" class="button one">
-                <p>1 button</p>
+                <p>Letter</p>
             </button>
             <button type="button" class="button two">
-                <p>2 button</p>
+                <p>Essay</p>
             </button>
             <div class="download-box"></div>
             <div class="savebtn-box"></div>
