--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <div class="header">
+            <div class="count"></div>
             <div class="show-time">
                 <div class="tablo"></div>
                 <div class="start-timer">Start</div>
