--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>Ielts</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
