--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
         <div class="header">
             <div class="count"></div>
+            <div class="count2"></div>
             <div class="show-time">
                 <div class="tablo"></div>
                 <div class="start-timer">Start</div>
