fix bugs index.html

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <div class="container">
         <div class="header">
             <div class="count"></div>
-            <div class="count2"></div>
             <div class="show-time">
                 <div class="tablo"></div>
-                <div class="start-timer">Start</div>
+                <button class="start-timer">Start</button>
             </div>
         </div>
         <div class="main"></div>
