fix another bugs index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <div class="tablo"></div>
                 <button class="start-timer">Start</button>
             </div>
+            <div class="count2"></div>
         </div>
         <div class="main"></div>
         <div class="footer">
